@@ -1315,7 +1315,7 @@ fgetpos
 fgets
 fgetwc
 fgetws
-floor
+floor DATA
 fmod DATA
 fopen
 fopen_s
