@@ -1322,8 +1322,8 @@ fgetpos
 fgets
 fgetwc
 fgetws
-floor
-floorf
+floor DATA
+floorf DATA
 fmod
 fmodf
 fopen
